vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pool-1
  namespace: tyro-models
spec:
  hosts:
  - "*"
  gateways:
  - gateway-1
  http:
  - route:
    - destination:
        host: model420
        port:
          number: 80
      weight: 50
    - destination:
        host: model666
        port:
          number: 80
      weight: 50

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-1
  namespace: tyro-models
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
